# SLAM_AI

./: .gitignore  README.md
ai_slam_ws/: inspect_dataset.py
ai_slam_ws/src/ai_slam_ai/: package.xml  setup.cfg  setup.py
ai_slam_ws/src/ai_slam_ai/ai_slam_ai/: common.py  dataset_recorder.py  experiment_logger.py  infer_node.py  train_model.py
ai_slam_ws/src/ai_slam_ai/resource/: ai_slam_ai
ai_slam_ws/src/ai_slam_bringup/: package.xml  setup.cfg  setup.py
ai_slam_ws/src/ai_slam_bringup/ai_slam_bringup/: auto_driver.py  gt_pose_publisher.py  lifecycle_manager.py  odom_corruptor.py  scan_fix.py
ai_slam_ws/src/ai_slam_bringup/config/: experiment_config.yaml  fast_test.yaml  slam_toolbox_ai.yaml  slam_toolbox_baseline.yaml
ai_slam_ws/src/ai_slam_bringup/launch/: demo.launch.py
ai_slam_ws/src/ai_slam_bringup/resource/: ai_slam_bringup
ai_slam_ws/src/ai_slam_description/: package.xml  setup.cfg  setup.py
ai_slam_ws/src/ai_slam_description/models/: diffbot.sdf
ai_slam_ws/src/ai_slam_description/resource/: ai_slam_description
ai_slam_ws/src/ai_slam_description/urdf/: diffbot.urdf
ai_slam_ws/src/ai_slam_eval/: package.xml  setup.cfg  setup.py
ai_slam_ws/src/ai_slam_eval/ai_slam_eval/: eval_node.py
ai_slam_ws/src/ai_slam_eval/maps/: reference_map.pgm  reference_map.yaml
ai_slam_ws/src/ai_slam_eval/resource/: ai_slam_eval
ai_slam_ws/src/ai_slam_gazebo/: package.xml  setup.cfg  setup.py
ai_slam_ws/src/ai_slam_gazebo/config/: bridge.yaml
ai_slam_ws/src/ai_slam_gazebo/resource/: ai_slam_gazebo
ai_slam_ws/src/ai_slam_gazebo/worlds/: ai_slam_world.sdf
install/: local_setup.bat  local_setup.ps1  local_setup.sh  setup.ps1  setup.sh
install/ai_slam_ai/lib/ai_slam_ai/: dataset_recorder  infer_node  train_model
install/ai_slam_ai/share/ai_slam_ai/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ai_slam_bringup/lib/ai_slam_bringup/: auto_driver  gt_pose_publisher  lifecycle_manager  odom_corruptor  scan_fix
install/ai_slam_bringup/share/ai_slam_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ai_slam_bringup/share/ai_slam_bringup/config/: slam_toolbox_ai.yaml  slam_toolbox_baseline.yaml
install/ai_slam_bringup/share/ai_slam_bringup/launch/: demo.launch.py
install/ai_slam_description/share/ai_slam_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ai_slam_description/share/ai_slam_description/models/: diffbot.sdf
install/ai_slam_description/share/ai_slam_description/urdf/: diffbot.urdf
install/ai_slam_eval/lib/ai_slam_eval/: eval_node
install/ai_slam_eval/share/ai_slam_eval/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ai_slam_eval/share/ai_slam_eval/maps/: reference_map.pgm  reference_map.yaml
install/ai_slam_gazebo/share/ai_slam_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ai_slam_gazebo/share/ai_slam_gazebo/config/: bridge.yaml
install/ai_slam_gazebo/share/ai_slam_gazebo/worlds/: ai_slam_world.sdf
log/: latest_build
scripts/: activate_env.sh  cleanup.sh  generate_reference_map.py  inspect_dataset.py  install_deps.sh  run_experiment.sh
