<?xml version="1.0"?>
<package format="3">
  <name>ai_slam_ai</name>
  <version>0.1.0</version>
  <description>Dataset, training and inference nodes (PyTorch) for drift correction.</description>
  <maintainer email="noreply@example.com">Kałamarnica</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
