<?xml version="1.0"?>
<package format="3">
  <name>ai_slam_bringup</name>
  <version>0.1.0</version>
  <description>Launch and supporting nodes for Gazebo + SLAM + AI + evaluation.</description>
  <maintainer email="noreply@example.com">Kałamarnica</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>ai_slam_description</exec_depend>
  <exec_depend>ai_slam_gazebo</exec_depend>
  <exec_depend>ai_slam_ai</exec_depend>
  <exec_depend>ai_slam_eval</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
