<?xml version="1.0"?>
<package format="3">
  <name>ai_slam_description</name>
  <version>0.1.0</version>
  <description>Robot description (URDF/SDF) for AI SLAM demo.</description>
  <maintainer email="noreply@example.com">Kałamarnica</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>