<?xml version="1.0"?>
<package format="3">
  <name>ai_slam_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic world and ros_gz bridge configuration.</description>
  <maintainer email="noreply@example.com">Kałamarnica</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
